--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,12 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/howardli/CredentialKit</url>
+        </repository>
+    </distributionManagement>
 
 </project>
