--- a/pom.xml
+++ b/pom.xml
@@ -42,4 +42,11 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/howardli/CredentialKit</url>
+        </repository>
+    </distributionManagement>
 </project>
